# frontend-vite/app/routes.ts
@@ -7,4 +7,7 @@ export default [
   route("/stations", "routes/stations.tsx"),
   route("/users", "routes/users.tsx"),
   route("/schedules", "routes/schedules.tsx"),
+  route("/documents", "routes/documents.tsx"),
+  route("/vessels", "routes/vessels.tsx"),
+  route("/about", "routes/about.tsx"),
 ] satisfies RouteConfig;
